--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				font-weight: normal;
 			}
 
-			h1 {
+			.mainTitle > .title {
 				background: linear-gradient(90deg, #82b189, #71d481);
 				box-shadow: inset 0 0 6px 2px #47644c;
 				font-size: 7em;
@@ -127,11 +127,11 @@
 	<body>
 		<div class="mainContainer">
 			<div class="mainTitle">
-				<h1>
+				<div class="title">
 					<span class="small">Strona koła naukowego</span>
 					<br />
 					IKE KULUPU
-				</h1>
+				</div>
 				<i id="navigateToDescription" class="arrow"></i>
 			</div>
 			<div id="info" class="infoContainer">
