--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>IKE KULUPU</title>
+		<meta name="theme-color" content="#737196">
 		<style>
 			@import url("https://fonts.cdnfonts.com/css/playbill");
 		</style>
@@ -88,7 +89,7 @@
 			}
 
 			.title {
-				padding-top: 30px;
+				padding-top: 10px;
 			}
 
 			ol {
